kube/demoapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp
  name: demoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - image: evertmulder/flaskweb:1
        name: flaskweb
        ports:
        - containerPort: 5000
          protocol: TCP
